components/ua/users-v1/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v1
spec:
  template:
    spec:
      containers:
        - name: user-office-web-service
          image: ghcr.io/isisbusapps/user-office-web-service@sha256:c35c44ea17981d75fe3f62d2e900be9aad1bb76a48ccc80bbd511a326b9e1a66
          ports:
            - containerPort: 7005
