components/ua/users-v1/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v1
spec:
  template:
    spec:
      containers:
        - name: user-office-web-service
          image: ghcr.io/isisbusapps/user-office-web-service@sha256:0356cb0dfaf671fb645e4b7b1154ce3c9f3c4bb206346e2bd04a8a6e384a6660
          ports:
            - containerPort: 7005
