components/ua/users-v1/overlays/dev/enable-debug-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-office-web-service-rest-v1
spec:
  ports:
    - name: debug
      protocol: TCP
      port: 7005
      targetPort: 7005
