components/ua/users-v1/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-office-web-service-v1
spec:
  parentRefs:
  - name: envoy-gateway
    kind: Gateway
    namespace: envoy-gateway-system
    sectionName: https-facilities
  hostnames:
  - "*.facilities.rl.ac.uk"
  - "*.developers.facilities.rl.ac.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /users-service/v1
    backendRefs:
    - name: user-office-web-service-rest-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /users-service/v1/quarkus
    backendRefs:
    - name: user-office-web-service-rest-v1
      port: 8080
